src/bindings/c/CPLC.h

extern "C" void CPLC_send(double* asend, int* asend_shape, int* limits, bool *send_flag);
extern "C" void CPLC_recv(double* arecv, int* arecv_shape, int* limits, bool *recv_flag);
extern "C" void CPLC_send_min(double* asend, int* asend_shape, bool *send_flag);
extern "C" void CPLC_recv_min(double* arecv, int* arecv_shape, bool *recv_flag);
extern "C" void CPLC_scatter(double* scatterarray, int* scatter_shape, int* limits, 
                             double* recvarray, int* recv_shape);
extern "C" void CPLC_gather(double* gatherarray, int* gather_shape, int* limits, 
                            double* recvarray, int* recv_shape);
extern "C" void CPLC_swaphalos(double* A, int* A_shape);
extern "C" void CPLC_proc_extents(int coord[], int realm, int extents[]);
extern "C" void CPLC_my_proc_extents(int extents[]);
extern "C" void CPLC_proc_portion(int coord[], int realm, int limits[], int portion[]);
extern "C" void CPLC_my_proc_portion(int limits[], int portion[]);
extern "C" bool CPLC_is_proc_inside(int region[]);