src/bindings/c/CPLC.f90


        call C_F_POINTER(asend_shape, asend_shape_f, [4])
        s1 = asend_shape_f(1) 
        s2 = asend_shape_f(2) 
        s3 = asend_shape_f(3) 
        s4 = asend_shape_f(4)
        call C_F_POINTER(asend, asend_f, [s1, s2, s3, s4])
        call C_F_BOOL(send_flag, send_flag_f)
        call CPL_send(asend_f, limits_f, send_flag_f)
        call F_C_BOOL(send_flag_f,send_flag)
        limits_f = limits_f - 1
    
    end subroutine CPLC_send


    subroutine CPLC_recv(arecv, arecv_shape, limits, recv_flag) &
        bind(C, name="CPLC_recv")
        use CPL, only: CPL_recv
        implicit none

        ! Boolean
        logical(C_BOOL),intent(out) :: recv_flag

        ! Inputs
        type(C_PTR), value :: arecv
        type(C_PTR), value :: limits
        type(C_PTR), value :: arecv_shape

        ! Fortran equivalent array pointers
        logical :: recv_flag_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: arecv_f
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: arecv_shape_f

        ! Other useful variables internal to this subroutine
        integer :: s1, s2, s3, s4

        call C_F_POINTER(limits, limits_f, [6])
        limits_f = limits_f + 1

        call C_F_POINTER(arecv_shape, arecv_shape_f, [4])
        s1 = arecv_shape_f(1) 
        s2 = arecv_shape_f(2) 
        s3 = arecv_shape_f(3) 
        s4 = arecv_shape_f(4) 
        call C_F_POINTER(arecv, arecv_f, [s1, s2, s3, s4])

        call C_F_BOOL(recv_flag, recv_flag_f)
        call CPL_recv(arecv_f, limits_f, recv_flag_f)
        call F_C_BOOL(recv_flag_f,recv_flag)
        limits_f = limits_f - 1

    end subroutine CPLC_recv

    subroutine CPLC_send_min(asend, asend_shape, send_flag) &
        bind(C, name="CPLC_send_min")
        use CPL, only: CPL_send!, CPL_send_4d, CPL_send_3d
        implicit none

        ! Boolean
        logical(C_BOOL),intent(out) :: send_flag

        ! Inputs
        type(C_PTR), value :: asend
        type(C_PTR), value :: asend_shape

        ! Fortran equivalent array pointers
        logical :: send_flag_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: asend_f
        integer, dimension(:), pointer :: asend_shape_f

        ! Other useful variables internal to this subroutine
        integer :: s1, s2, s3, s4

        call C_F_POINTER(asend_shape, asend_shape_f, [4])
        s1 = asend_shape_f(1) 
        s2 = asend_shape_f(2) 
        s3 = asend_shape_f(3) 
        s4 = asend_shape_f(4)
        call C_F_POINTER(asend, asend_f, [s1, s2, s3, s4])
        call C_F_BOOL(send_flag, send_flag_f)
        call CPL_send(asend_f, send_flag_f)
        call F_C_BOOL(send_flag_f,send_flag)
    
    end subroutine CPLC_send_min

    subroutine CPLC_recv_min(arecv, arecv_shape, recv_flag) &
        bind(C, name="CPLC_recv_min")
        use CPL, only: CPL_recv
        implicit none

        ! Boolean
        logical(C_BOOL),intent(out) :: recv_flag

        ! Inputs
        type(C_PTR), value :: arecv
        type(C_PTR), value :: arecv_shape

        ! Fortran equivalent array pointers
        logical :: recv_flag_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: arecv_f
        integer, dimension(:), pointer :: arecv_shape_f

        ! Other useful variables internal to this subroutine
        integer :: s1, s2, s3, s4

        call C_F_POINTER(arecv_shape, arecv_shape_f, [4])
        s1 = arecv_shape_f(1) 
        s2 = arecv_shape_f(2) 
        s3 = arecv_shape_f(3) 
        s4 = arecv_shape_f(4) 
        call C_F_POINTER(arecv, arecv_f, [s1, s2, s3, s4])

        call C_F_BOOL(recv_flag, recv_flag_f)
        call CPL_recv(arecv_f, recv_flag_f)
        call F_C_BOOL(recv_flag_f,recv_flag)

    end subroutine CPLC_recv_min


    subroutine CPLC_scatter(scatterarray, scatter_shape, limits, recvarray, &
                            recv_shape) &
        bind(C, name="CPLC_scatter")
        use CPL, only: CPL_scatter
        implicit none
   
        ! Inputs
        type(C_PTR), value :: scatterarray ! (sn, sx, sy, sz) (see below)
        type(C_PTR), value :: scatter_shape ! (4)
        type(C_PTR), value :: limits ! (6)
        type(C_PTR), value :: recv_shape ! (4)
        type(C_PTR), value :: recvarray ! (rn, rx, ry, rz) (see below)

        ! Fortran equivalent array pointers
        integer, dimension(:), pointer :: scatter_shape_f
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: recv_shape_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: scatterarray_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: recvarray_f

        ! Other useful variables internal to this subroutine
        integer :: sx, sy, sz ! Number of cells in (s)cattered array
        integer :: rx, ry, rz ! Number of cells in (r)eceived array
        integer :: sn ! Number of values per cell in sent array
        integer :: rn ! Number of values per cell in recv array

        ! Store limits array first
        call C_F_POINTER(scatter_shape, scatter_shape_f, [4])
        call C_F_POINTER(recv_shape, recv_shape_f, [4])
        call C_F_POINTER(limits, limits_f, [6])

        ! Store shape of scattered array
        sn = scatter_shape_f(1)
        sx = scatter_shape_f(2)
        sy = scatter_shape_f(3)
        sz = scatter_shape_f(4)

        ! Store shape of received array
        !if (recv_shape_f(1) .ne. sn) then
        !    call error_abort("Error: npercell in scatter_shape and "// &
        !                     "recv_shape must are not the same. Aborting.")
        !end if
        rn = recv_shape_f(1)
        rx = recv_shape_f(2)
        ry = recv_shape_f(3)
        rz = recv_shape_f(4)

        ! Remaining conversions
        call C_F_POINTER(scatterarray, scatterarray_f, [sn, sx, sy, sz])
        call C_F_POINTER(recvarray, recvarray_f, [rn, rx, ry, rz])

        limits_f = limits_f + 1

        ! Library call
        call CPL_scatter(scatterarray_f, sn, limits_f, recvarray_f)

        limits_f = limits_f - 1



    end subroutine CPLC_scatter



    subroutine CPLC_gather(gatherarray, gather_shape, limits, recvarray, &
                            recv_shape) &
        bind(C, name="CPLC_gather")
        use CPL, only: CPL_gather
        implicit none
   
        ! Inputs
        type(C_PTR), value :: gatherarray ! (gn, gx, gy, gz) (see below)
        type(C_PTR), value :: gather_shape ! (4)
        type(C_PTR), value :: limits ! (6)
        type(C_PTR), value :: recv_shape ! (4)
        type(C_PTR), value :: recvarray ! (rn, rx, ry, rz) (see below)

        ! Fortran equivalent array pointers
        integer, dimension(:), pointer :: gather_shape_f
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: recv_shape_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: gatherarray_f
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: recvarray_f

        ! Other useful variables internal to this subroutine
        integer :: gx, gy, gz ! Number of cells in (s)cattered array
        integer :: rx, ry, rz ! Number of cells in (r)eceived array
        integer :: gn, rn ! Number of values per cell in arrays

        ! Store limits array first
        call C_F_POINTER(gather_shape, gather_shape_f, [4])
        call C_F_POINTER(recv_shape, recv_shape_f, [4])
        call C_F_POINTER(limits, limits_f, [6])

        ! Store shape of gathered array
        gn = gather_shape_f(1)
        gx = gather_shape_f(2)
        gy = gather_shape_f(3)
        gz = gather_shape_f(4)

        ! Received array shape
        rn = recv_shape_f(1)
        rx = recv_shape_f(2)
        ry = recv_shape_f(3)
        rz = recv_shape_f(4)

        ! Remaining conversions
        call C_F_POINTER(gatherarray, gatherarray_f, [gn, gx, gy, gz])
        call C_F_POINTER(recvarray, recvarray_f, [rn, rx, ry, rz])

        limits_f = limits_f + 1

        ! Library call
        call CPL_gather(gatherarray_f, rn, limits_f, recvarray_f)

        limits_f = limits_f - 1


    end subroutine CPLC_gather


    subroutine CPLC_swaphalos(A, A_shape) &
        bind(C, name="CPLC_swaphalos")
        use CPL, only: CPL_swaphalos
        implicit none

        ! Inputs
        type(C_PTR), value :: A
        type(C_PTR), value :: A_shape

        ! Fortran equivalent array pointers
        real(kind(0.d0)), dimension(:,:,:,:), pointer :: A_f
        integer, dimension(:), pointer :: A_shape_f

        ! Other useful variables internal to this subroutine
        integer :: s1, s2, s3, s4

        call C_F_POINTER(A_shape, A_shape_f, [4])
        s1 = A_shape_f(1) 
        s2 = A_shape_f(2) 
        s3 = A_shape_f(3) 
        s4 = A_shape_f(4)
        call C_F_POINTER(A, A_f, [s1, s2, s3, s4])
        call CPL_swaphalos(A_f)  

    end subroutine CPLC_swaphalos


    subroutine CPLC_proc_extents(coord, realm, extents) &
        bind(C, name="CPLC_proc_extents")
        use CPL, only: CPL_proc_extents
        
        ! Inputs
        type(C_PTR), value :: coord ! (3)
        type(C_PTR), value :: extents ! (6)
        integer(C_INT), value :: realm

        ! Fortran equivalent arrays
        integer, dimension(:), pointer :: coord_f
        integer, dimension(:), pointer :: extents_f

        call C_F_POINTER(coord, coord_f, [3])
        call C_F_POINTER(extents, extents_f, [6])

        coord_f = coord_f + 1

        call CPL_proc_extents(coord_f, realm, extents_f)

        coord_f = coord_f - 1
        extents_f = extents_f - 1;

    end subroutine CPLC_proc_extents


    subroutine CPLC_my_proc_extents(extents) &
        bind(C, name="CPLC_my_proc_extents")
        use CPL, only: CPL_my_proc_extents
        
        ! Inputs
        type(C_PTR), value :: extents! (6)

        ! Fortran equivalent arrays
        integer, dimension(:), pointer :: extents_f

        call C_F_POINTER(extents, extents_f, [6])

        call CPL_my_proc_extents(extents_f)

        extents_f = extents_f - 1;

    end subroutine CPLC_my_proc_extents


    subroutine CPLC_proc_portion(coord, realm, limits, portion) &
        bind(C, name="CPLC_proc_portion")
        use CPL, only: CPL_proc_portion
        
        ! Inputs
        type(C_PTR), value :: coord ! (3)
        integer(C_INT), value :: realm
        type(C_PTR), value :: limits ! (6)
        type(C_PTR), value :: portion ! (6)

        ! Fortran equivalent arrays
        integer, dimension(:), pointer :: coord_f
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: portion_f

        call C_F_POINTER(coord, coord_f, [3])
        call C_F_POINTER(limits, limits_f, [6])
        call C_F_POINTER(portion, portion_f, [6])


        coord_f = coord_f + 1
        limits_f = limits_f + 1


        call CPL_proc_portion(coord_f, realm, limits_f, portion_f)

        portion_f = portion_f - 1;
        coord_f = coord_f - 1
        limits_f = limits_f - 1

    end subroutine CPLC_proc_portion


    subroutine CPLC_my_proc_portion(limits, portion) &
        bind(C, name="CPLC_my_proc_portion")
        use CPL, only: CPL_my_proc_portion
        
        ! Inputs
        type(C_PTR), value :: limits ! (6)
        type(C_PTR), value :: portion ! (6)

        ! Fortran equivalent arrays
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: portion_f

        call C_F_POINTER(limits, limits_f, [6])
        call C_F_POINTER(portion, portion_f, [6])

        limits_f = limits_f + 1

        call CPL_my_proc_portion(limits_f, portion_f)

        portion_f = portion_f - 1;
        limits_f = limits_f - 1

    end subroutine CPLC_my_proc_portion

    logical(C_BOOL) function CPLC_is_proc_inside(region) &
        bind(C, name="CPLC_is_proc_inside")
        use CPL, only: CPL_is_proc_inside

        type(C_PTR), value :: region ! (6)
        integer, dimension(:), pointer :: region_f
        call C_F_POINTER(region, region_f, [6])

        region_f = region_f + 1
